--- a/mytheme/templates/base.html
+++ b/mytheme/templates/base.html
@@ -41,7 +41,7 @@
         {% endfor %}
             
         {% if DISPLAY_PAGES_ON_MENU %}
-        {% for page in PAGES %}
+        {% for page in PAGES|sort(attribute='order') %}
             <li><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a></li>
         {% endfor %}
         {% endif %}
